--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "1.1.4"
   },
   "scripts": {
+    "all": "npm-run-all --parallel dev start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
