--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^3.0.2",
     "jsonfile": "^4.0.0",
+    "mongoose": "^5.1.4",
     "react": "^16.4.0",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.4.0",
