--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "apollo-boost": "^0.1.7",
     "apollo-server-express": "^1.3.6",
+    "babel-polyfill": "^6.26.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
