--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "apollo-boost": "^0.1.7",
     "apollo-server-express": "^1.3.6",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
